--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>SANKARA HOTEL</title>
 </head>
 <body>
-    
+ <img src="/Sankara1.jpg"height="300px",padding="5px",title="Spectacular" height="300"class="center">
+ 
 </body>
 </html>
