--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <title>Becky Star </title>
         <meta charset="UTF-8">
         <title>My Website</title>
-        <link rel="stylesheet" type="text/css" href="con.css">
+        <link rel="stylesheet"  href="con.css">
 </head>
   
 <body>
