--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <section>
         <div class="topnav">
             <a class="active" href="#home">Home</a>
-            <a href="#contact">Contact Us</a>
+            <a href="contact.html">Contact Us</a>
             <a href="#about">Steak house</a>
           </div> 
   </section>
