--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to Sankara, a 5 star hotel in the heart of Nairobi</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href=
+    "style.css">
 </head>
 <body>
     <h1>WELCOME TO BECKY STAR HOTEL</h1>
@@ -13,7 +14,7 @@
         <div class="topnav">
             <a class="active" href="#home">Home</a>
             <a href="contact.html">Contact Us</a>
-            <a href="#about">Steak house</a>
+            <a href="dish.html">Steak house</a>
           </div> 
   </section>
   <div class="row">
